# Second-Brain

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Makefile  PLAN.md  PORTS.md  README.md  SPEC.md  docker-compose.yml
.claude/: api-reference.md  architecture-decisions.md  coding-conventions.md  commands.md  env-vars.md  file-map.md  gotchas.md  memory.md  project-structure.md  research-findings.md  schema-reference.md  scratchpad.md
backend/: Dockerfile  Dockerfile.telegram  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: bookmarks.py  notes.py  pdfs.py  search.py  settings.py  tags.py  wiki.py  wiki_compile.py  wiki_graph.py
backend/app/services/: chunking_service.py  embedding_service.py  llm_service.py  pdf_service.py  rag_service.py  scraping_service.py  wiki_compilation_service.py
backend/app/utils/: logger.py  tokenizer.py  wiki_helpers.py
backend/migrations/: schema.sql
backend/telegram_bot/: bot.py  handlers.py  utils.py
backend/tests/: conftest.py  test_api_bookmarks.py  test_api_notes.py  test_api_tags.py  test_api_wiki.py  test_chunking.py  test_search.py  test_tokenizer.py  test_wiki_compilation.py  test_wiki_export.py  test_wiki_graph_lint.py  test_wiki_models.py  test_wiki_search.py  test_wiki_staleness.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  types.d.ts
frontend/__tests__/: api.test.ts  store.test.ts  utils.test.ts  wiki-api.test.ts  wikilinks.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: Header.tsx  Pagination.tsx  (+2 more)
(+23 files in other folders)
